traefik/traefik-api.Service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: traefik
  name: traefik-api
spec:
  selector:
    app: traefik
  ports:
    - name: traefik
      port: 9000
      targetPort: traefik
