traefik/traefik-test.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-test
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30007
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30008
