traefik/traefik.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: traefik.home.elkiaer.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  name: traefik
  tls:
    - hosts:
        - traefik.home.elkiaer.net
      secretName: net-elkiaer-home-traefik
